# neck-control

./: .gitmodules  CMakeLists.txt  arco090.csv  arco10.csv  arco107.csv  arco1075.csv  ik.csv  main.cpp  spring097.csv
lib/: CMakeLists.txt
lib/mainlib/: Kinematics.cpp  Kinematics.h  mainlib.h
main/: closedloop.cpp  controller-test.cpp  demo1.cpp  demo360.cpp  feedback.cpp  kinematics.cpp  main.cpp  openloop.cpp  position-control.cpp  sensor-feedback.cpp  sensor-read.cpp  sensortest.cpp  set-torque.cpp  softneck_test.cpp  spring_test.cpp  start.cpp  stop.cpp  test.cpp  testacelero.cpp  trayectoria.cpp  verification.cpp
script/: pushall
